feat(core): Update company creation api
